2008-08-30  Vivien Malerba <malerba@gnome-db.org>

	Renamed GdaPModel to GdaDataSelect (also changed the source files to libgda/) and
	updated the documentation.

2008-08-29  Vivien Malerba <malerba@gnome-db.org>

	* doc/C/tmpl/gda-pmodel-user.sgml: adding mising file
	* tests/data-models/Makefile.am:
	* tests/data-models/check_pmodel.c: corrections to have "make distcheck" run

2008-08-28  Vivien Malerba <malerba@gnome-db.org>

	* libgda/handlers/gda-handler-numerical.c:
	* libgda/gda-data-model.c:
	* libgda/gda-data-model-import.c:
	* libgda/gda-server-operation.c:
	* libgda/gda-set.c:
	* libgda/gda-util.c:
	* libgda/gda-init.c: set the global variables gda_numeric_locale and gda_lang_locale
	when calling gda_init() and use those variables whenever setlocale() was called to fetch
	those locale values
	* providers/mysql/gda-mysql-recordset.c:
	* providers/postgres/gda-postgres-recordset.c: correctly restore
	the user LC_NUMERIC locale after having altered it (thanks to Tim Lapawa)
	* libgda/gda-util.c: understand the "time" and "timestamp" datatypes
	as synonyms for "GdaTime" and and "GdaTimestamp"
	* libgda/gda-value.c: reset a value before copying the other value's contents
	* libgda/providers-support/gda-pmodel.[ch]: improvements to modifiable
	data models (working now are gda_data_model_set_value_at(), gda_data_model_remove_row() and
	gda_data_model_append_values())
	* tests/data-models: updates to the check_pmodel test
	* libgda/gda-holder.c: speed improvement in gda_holder_set_value_str(), and avoid mem leak in
	some circumnstances
	* libgda/sql-parser/gda-sql-parser.c: fix to remove a warning
	* libgda/gda-connection.[ch]: removed gda_connection_add_events_list() as it was not used and
	did not behave in an usual way regarding its input arguments, moved gda_connection_add_event(),
	gda_connection_add_event_string() and gda_connection_clear_events_list() to the providers' API